Re-added Grindstone mechanics - Added "(-1)" text to output item when used in the Grindstone - re-added the following enchantments:  - Boiling Arrow  - Burning - Fixed exclusive_set directory being misspelled - Added curses to villager trading - Enchantment table now uses remaining enchantability when generating enchantments - Re-added curses when enchanting - fixed linked-curse entries being in the wrong directory